2003-07-12  Jeff Muizelaar  <muizelaar@rogers.com>

	* coffcode.h (coff_set_section_contents): Set the
	IMAGE_FILE_32BIT_MACHINE flag for PE targets.

2003-07-11  Richard Sandiford  <rsandifo@redhat.com>

	* bfd-in.h (bfd_h8300_pad_address): Declare.
	* bfd-in2.h: Regenerate.
	* cpu-h8300.c (bfd_h8300_pad_address): New function.
	* coff-h8300.c (h8300_reloc16_estimate): Use it to canonicalize
	addresses before checking whether they can be relaxed.
	(h8300_reloc16_extra_cases): Likewise for the R_MOVL2 sanity check.
	Don't complain about overflows in general 8-bit relocations.
	* elf32-h8300.c (elf32_h8_relax_section): Use bfd_h8300_pad_address.
	Fix handling of R_H8_DIR24A8.

2003-07-11  Richard Sandiford  <rsandifo@redhat.com>

	* elf32-h8300.c: Convert function prototypes and definitions
	to C90 syntax.
	* coff-h8300.c: Likewise.
	* cpu-h8300.c: Likewise.

2003-07-11  Alan Modra  <amodra@bigpond.net.au>

	* po/SRC-POTFILES.in: Regenerate.
	* po/bfd.pot: Likewise.

2003-07-10  Bob Wilson  <bob.wilson@acm.org>

	* elf32-xtensa.c (elf_xtensa_create_dynamic_sections): Create new
	.got.loc section.  Do not set SEC_ALLOC or SEC_LOAD flags for the
	.xt.lit.plt section.
	(elf_xtensa_size_dynamic_sections): Set size of the .got.loc section
	and allocate memory for it.
	(elf_xtensa_combine_prop_entries): Copy contents of .xt.lit output
	section to the .got.loc section.
	(elf_xtensa_finish_dynamic_sections): Fix up call to
	elf_xtensa_combine_prop_entries and set DT_XTENSA_GOT_LOC_OFF to
	the address of .got.loc.
	(relax_property_section): Shrink .got.loc to match changes in any
	literal table section.
	(xtensa_is_property_section): Change to match
	xtensa_get_property_section_name.
	(xtensa_is_littable_section): New.

2003-07-10  H.J. Lu <hongjiu.lu@intel.com>

	* elfxx-ia64.c (IA64_HOWTO): Set dst_mask to -1 instead of
	-1LL.

2003-07-10  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.am (BFD32_BACKENDS): Add elf32-am33lin.lo.